--- a/css/templatemo-dream-pulse.css
+++ b/css/templatemo-dream-pulse.css
@@ -50,7 +50,7 @@ a {
 }
 
 .tm-intro {
-  max-width: 500px;
+  max-width: 630px;
   width: 100%;
   padding: 55px;
   margin-right: 0;
@@ -58,7 +58,21 @@ a {
 }
 
 .tm-section-title {
-  font-size: 1.6rem;
+  font-size: 2.8rem;
+	text-align: center;
+}
+.tm-section-title2{
+	font-size: 2rem;
+	width: 300px;
+	height: 100px;
+	margin: 50px auto;
+	text-align: center;
+	overflow: hidden;
+	line-height: 100px;
+	border-radius: 20px;
+	color: white;
+	background-color: black;
+	box-shadow: 10px 10px 25px #00000080;
 }
 
 .parallax-window {
@@ -163,8 +177,8 @@ a {
 
 .tm-white-rect {
   display: block;
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
   background-color: white;
 }
 
@@ -249,11 +263,12 @@ a {
 
 .tm-section-icon {
   color: #369;
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 20px;
 }
 
 /* Our Work */
@@ -620,7 +635,7 @@ figure.effect-bubba:hover p {
   }
 
   .tm-brand {
-    padding: 20px 30px;
+    padding: 10px 20px;
   }
 
   .tm-main-nav {
@@ -708,12 +723,11 @@ figure.effect-bubba:hover p {
 }
 
 .login{
-	background-color: #0b132b;
-	color: #f8f9fa;
-	box-shadow: 10px 10px 25px #00000080;
+	color: black;
+	overflow: auto;
+	
+	border-radius: 5px;
 }
-
-
 
 .login2{
 	background-color: #f8f9fa;
@@ -724,3 +738,6 @@ figure.effect-bubba:hover p {
   -webkit-text-stroke: 0.5px #00CC66;
 }
 
+.tm-section-transform-icon{
+	transform: translateX(95px);
+}
